fix: Fix spacing under bio image.
- remove clear: both <div>
- adjust image and section padding

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,17 +60,14 @@ h3 {
 
 
 h4 {
-  font-weight: bold;
-  font-size: 14px;
-  color: #4a4a4a;
-  line-height: 17px;
+  font-weight: inherit;
+  font-size: inherit;
 }
 
 hr {
   margin: 20px 0;
 }
 
-header,
 section {
   padding-bottom: 20px;
 }
@@ -84,6 +81,8 @@ section {
 .employer-text {
   color: #6f6f6f;
   font-weight: bold;
+  padding: 0;
+  margin: 0;
 }
 
 .date-text {
@@ -188,7 +187,7 @@ a {
 /* TODO: Replace with image later */
 #header {
   padding-top: 20px;
-  padding-bottom: 39px;
+  padding-bottom: 64px;
 }
 
 
@@ -210,7 +209,7 @@ ul {
 
 .biopic {
   float: left;
-  margin: 10px 30px 0 0;
+  margin: 20px 30px 0 0;
   display: none;
   padding: 8px 8px 24px;
   background-color: #fff;
